--- a/resources/assets/css/theme.css
+++ b/resources/assets/css/theme.css
@@ -2055,3 +2055,30 @@ label{color: black !important;}
       display:none;
   }
 }
+
+.select2-container--default .select2-selection--single {
+    height: 43px !important;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border-radius: 6px;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    top: 85% !important;
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 23px !important;
+}
+.select2-container--default .select2-selection--single {
+    border: 1px solid #CCC !important;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+}
+
+.select2-container--default .select2-search--dropdown .select2-search__field {
+    padding: 8px;
+}
+.select2-container--default .select2-search--dropdown .select2-search__field:focus {
+    outline:unset;
+}
+
